# bing-downloader

./: CMakeLists.txt  readme.md
src/: BingWallpaperScript.h  CMakeLists.txt  CurlGetDispatcher.cpp  CurlGetDispatcher.h  CurlWriteChunks.cpp  CurlWriteChunks.h  Options.h  ResourceGetter.h  ThreadPool.cpp  ThreadPool.h  XMLCacheManager.h  XMLContainer.cpp  XMLContainer.h  XMLQueries.cpp  XMLQueries.h  archive.cpp  main.cpp
src/alt/: CMakeLists.txt  curltest.cpp  json.cpp  options.cpp
src/filters/: DayFilter.cpp  DayFilter.h  FilterOps.h  Filters.h  IFilter.h  MonthFilter.cpp  MonthFilter.h  PassConditionalFilter.cpp  PassConditionalFilter.h  YearFilter.cpp  YearFilter.h
test-server/: CMakeLists.txt
test-server/src/: BasicTypes.h  CMakeLists.txt  FoxServer.cpp  HTTPHeaderParse.h  NaiveHeader.cpp  NaiveHeader.h  NaiveSocketComponents.cpp  NaiveSocketComponents.h  SelfClosingSocket.cpp  SelfClosingSocket.h  SimpleFoxServer.cpp  SimpleFoxServer.h  ThreadPool.cpp  ThreadPool.h  archived_main.cpp  main.cpp
test-server/src/pure-functions/: FileIO.cpp  FileIO.h  Parsing.cpp  Parsing.h
test-server/test-client/: main.cpp
test-server/tests/: BasicTypesTests.cpp  CMakeLists.txt  HTTPHeaderParseTests.cpp  NaiveHeaderTests.cpp  NaiveSocketComponentsTests.cpp
tests/: CMakeLists.txt  FiltersTest.cpp  ResourceGetterTests.cpp  XMLContainerTests.cpp
